@@ -151,3 +151,5 @@ v1.2.1
 v1.2.2
 ------
 - Add in check for Custom Colors inclusion when generating Internal Memory file
+- Moved Portal() function to be last function above ShowInterface()
+- Added additional comments to generated code file
